adding colors to nav

--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -111,3 +111,15 @@ body {
 
 // Based on code by Diego Eis
 
+a.fbook-nav:hover {
+    color: #3c5a9c;
+}
+a.twitter-nav:hover {
+    color: #59a8df;
+}
+a.dribbble-nav:hover {
+    color: #ec4888;
+}
+a.github-nav:hover {
+    color: #d46800;
+}
