--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5934,6 +5934,9 @@ ul, ol {
 
 .post-content {
   margin: 2em 0; }
+  .post-content h2 {
+    color: #d32f2f;
+    text-transform: uppercase; }
 
 .featured-post-list {
   float: left;
