--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5936,7 +5936,11 @@ ul, ol {
   margin: 2em 0; }
   .post-content h2 {
     color: #d32f2f;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    font-family: "Tallow", "Slabo 27px", Georgia, serif; }
+  .post-content p {
+    line-height: 1.4em;
+    font-size: 1em; }
 
 .featured-post-list {
   float: left;
