adding Harlow Builders Case Study

--- a/assets/scss/components/_post.scss
+++ b/assets/scss/components/_post.scss
@@ -5,6 +5,7 @@
         color: $primary;
         text-transform: uppercase;
         font-family: $tallow;
+        font-size: 3em;
     }
     
     p {
