--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5937,7 +5937,8 @@ ul, ol {
   .post-content h2 {
     color: #d32f2f;
     text-transform: uppercase;
-    font-family: "Tallow", "Slabo 27px", Georgia, serif; }
+    font-family: "Tallow", "Slabo 27px", Georgia, serif;
+    font-size: 3em; }
   .post-content p {
     line-height: 1.4em;
     font-size: 1em; }
