adding Harlow Builders Case Study

--- a/assets/scss/components/_post.scss
+++ b/assets/scss/components/_post.scss
@@ -4,9 +4,9 @@
     h2 {
         color: $primary;
         text-transform: uppercase;
-        font-family: $lato;
         font-size: 3em;
         text-align: center;
+        font-weight: 700;
     }
     
     p {
