--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5937,9 +5937,9 @@ ul, ol {
   .post-content h2 {
     color: #d32f2f;
     text-transform: uppercase;
-    font-family: "Lato";
     font-size: 3em;
-    text-align: center; }
+    text-align: center;
+    font-weight: 700; }
   .post-content p {
     line-height: 1.8em;
     font-size: 1.2em; }
