--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5933,10 +5933,10 @@ ul, ol {
   list-style-type: none; }
 
 .post-content {
-  margin: 2.5em 0; }
+  margin: 5em 0; }
   .post-content h2 {
     color: #d32f2f;
-    font-size: 5em;
+    font-size: 2.5em;
     text-align: center;
     font-weight: 700; }
   .post-content p {
@@ -5946,8 +5946,7 @@ ul, ol {
       font-size: .9em;
       font-color: #999999;
       font-style: italic;
-      margin-bottom: 4em;
-      text-align: right; }
+      margin-bottom: 4em; }
   .post-content img {
     margin-top: 4em; }
 
