--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5938,7 +5938,8 @@ ul, ol {
     color: #d32f2f;
     font-size: 2.5em;
     text-align: center;
-    font-weight: 700; }
+    font-weight: 700;
+    margin-bottom: 2em; }
   .post-content p {
     line-height: 1.8em;
     font-size: 1.2em; }
@@ -5948,7 +5949,7 @@ ul, ol {
       font-style: italic;
       margin-bottom: 4em; }
   .post-content img {
-    margin-top: 3.5em; }
+    margin-top: 2.8em; }
 
 .featured-post-list {
   float: left;
