--- a/assets/scss/components/_post.scss
+++ b/assets/scss/components/_post.scss
@@ -6,6 +6,7 @@
         font-size: 2.5em;
         text-align: center;
         font-weight: 700;
+        margin-bottom: 2em;
     }
     
     p {
@@ -21,7 +22,7 @@
     }
     
     img {
-        margin-top: 3.5em;
+        margin-top: 2.8em;
     }
 }
 
