Adding Harlow Builders Case Study

--- a/assets/scss/components/_post.scss
+++ b/assets/scss/components/_post.scss
@@ -26,8 +26,10 @@
     }
     
     hr {
-        width: 25%;
+        width: 15%;
         color: $primary;
+        margin-top: 4em;
+        border: 5px solid;
     }
 }
 
