--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5951,8 +5951,10 @@ ul, ol {
   .post-content img {
     margin-top: 2.8em; }
   .post-content hr {
-    width: 25%;
-    color: #d32f2f; }
+    width: 15%;
+    color: #d32f2f;
+    margin-top: 4em;
+    border: 5px solid; }
 
 .featured-post-list {
   float: left;
