--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -13,7 +13,7 @@
       <img src="assets/img/jordan-circle.png" alt="Jordan Barhorst - a Cincinnati Web Designer">
       <h1>Hey, I'm Jordan</h1>
       <h2>I’m a front end web designer and developer from <span class="big-break"><br /></span><span class="bold-italic">Cincinnati, Ohio.</span></h2>
-      <a class="white hollow-button">Check out some stuff I've made</a>
+      <a href="{{ site.baseurl }}/about/" class="white hollow-button">Tell me more</a>
   </div>
 </div>
 
