--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="sub-hero" style="background-image:url('/assets/img/portfolio-items/{{ page.heroimage }}');">
+<div class="sub-hero" style="background-image:url('/assets/img/pages/{{ page.heroimage }}');">
   <div class="hero-nav-bar wrapper">
       <div class="logo-spot">
           <a href="{{ site.url }}"><img src="/assets/img/logo-white.png" alt="Jordan Barhorst - Cincinnati Web Design"></a>
