--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,8 +14,7 @@ layout: default
   </div>
   <div class="hero-content wrapper">
       <!-- DATE <span class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</span> -->
-      <span class="post-meta">{{ page.categories }}</span>
-      <h1>{{ page.title }}</h1>
+      <h1>{{ page.headline}}</h1>
       <h3>{{ page.subline }}</h3>
       <a href="{{ page.button-link }}" class="white hollow-button">{{ page.button-text }}</a>
   </div>
