--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -22,7 +22,7 @@ layout: default
   <header class="post-header">
   </header>
   <article class="post-content">
-    {% for post in site.tags[portfolio] %}
+    {% for post in site.tags['portfolio'] %}
 <a href="{{ post.url | prepend: site.baseurl }}"><h1>{{ post.title}}</h1></a>
 {% endfor %}
     {{ content }}
