--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -123,3 +123,8 @@ a.dribbble-nav:hover {
 a.github-nav:hover {
     color: #d46800!important;
 }
+
+
+.work-portfolio-item {
+     @include span-columns(3)
+}
