--- a/assets/scss/components/_posts-list.scss
+++ b/assets/scss/components/_posts-list.scss
@@ -142,3 +142,33 @@
         
     }
 }
+
+.work-portfolio-item {
+     @include span-columns(3);
+     position: relative;
+         
+     .portfolio-overlay {
+          position: absolute;
+          top: 0;
+          left: 0;
+          opacity: 0;
+          height: 100%;
+          text-align: center;
+          color: #fff;
+          padding-top: 30%;
+          width: 100%;
+          transition: opacity ease .5s;
+
+            &:hover {
+                opacity: .95;
+            }
+
+            a {
+               line-height: 5em;
+            }
+
+            h3 {
+               font-weight: 700;
+            }
+        }
+}
