--- a/assets/scss/components/_posts-list.scss
+++ b/assets/scss/components/_posts-list.scss
@@ -146,6 +146,7 @@
 .work-portfolio-item {
      @include span-columns(3);
      position: relative;
+     text-align: center;
          
      .portfolio-overlay {
           position: absolute;
