--- a/assets/scss/components/_posts-list.scss
+++ b/assets/scss/components/_posts-list.scss
@@ -172,4 +172,9 @@
                font-weight: 700;
             }
         }
+    
+       .post-content img {
+           padding: 0;
+           margin-top: 2.8em;
+       }
 }
