adding images to portfolio

--- a/assets/scss/components/_posts-list.scss
+++ b/assets/scss/components/_posts-list.scss
@@ -175,6 +175,7 @@
         }
     
        .post-content img {
-           padding: 0!important;
+           padding-top: 0!important;
+           margin-top: 0!important;
        }
 }
