--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6088,7 +6088,8 @@ ul, ol {
     .work-portfolio-item .portfolio-overlay h3 {
       font-weight: 700; }
   .work-portfolio-item .post-content img {
-    padding: 0 !important; }
+    padding-top: 0 !important;
+    margin-top: 0 !important; }
 
 .site-footer {
   float: left;
