adding images to portfolio

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6087,7 +6087,7 @@ ul, ol {
       line-height: 5em; }
     .work-portfolio-item .portfolio-overlay h3 {
       font-weight: 700; }
-  .work-portfolio-item .post-content img {
+  .work-portfolio-item img {
     padding-top: 0 !important;
     margin-top: 0 !important; }
 
