--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6067,7 +6067,7 @@ ul, ol {
   width: 28.20513%;
   position: relative;
   text-align: center;
-  margin-top: 2.8em; }
+  margin: 2.8em 0 0 1em; }
   .work-portfolio-item:last-child {
     margin-right: 0; }
   .work-portfolio-item .portfolio-overlay {
