--- a/assets/scss/components/_posts-list.scss
+++ b/assets/scss/components/_posts-list.scss
@@ -147,7 +147,7 @@
      @include span-columns(3);
      position: relative;
      text-align: center;
-     margin-top: 2.8em;
+     margin: 2.8em 0 0 1em;
          
      .portfolio-overlay {
           position: absolute;
