--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -180,6 +180,10 @@
     
     .work-portfolio-item {
      @include span-columns(4);
+        
+        .portfolio-overlay {
+            opacity: .75;
+        }
     }
 }
 
