--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6543,8 +6543,12 @@ a.github-nav:hover {
     width: 38.46154%; }
     .work-portfolio-item:last-child {
       margin-right: 0; }
+    .work-portfolio-item h3 {
+      font-size: 1.4em; }
+    .work-portfolio-item a.hollow-button {
+      font-size: .9em; }
     .work-portfolio-item .portfolio-overlay {
-      opacity: .75; } }
+      opacity: .9; } }
 @media (max-width: 700px) {
   .hero h1 {
     font-size: 80px !important; }
