--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6548,7 +6548,14 @@ a.github-nav:hover {
     .work-portfolio-item a.hollow-button {
       font-size: .9em; }
     .work-portfolio-item .portfolio-overlay {
-      opacity: .9; } }
+      opacity: .9; }
+
+  .post .post-content {
+    margin: 0; }
+    .post .post-content .work-portfolio-item .portfolio-overlay h3 {
+      font-size: 1.4em; }
+    .post .post-content .work-portfolio-item .portfolio-overlay a.hollow-button {
+      font-size: .9em; } }
 @media (max-width: 700px) {
   .hero h1 {
     font-size: 80px !important; }
