--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -192,6 +192,25 @@
             opacity: .9;
         }
     }
+    
+    .post {
+        .post-content {
+            margin: 0;
+            
+            .work-portfolio-item {
+                .portfolio-overlay {
+                    h3 {
+                        font-size: 1.4em;
+                    }
+                    a.hollow-button {
+                        font-size: .9em;
+                    }
+                }
+            }
+        }
+        
+        
+    }
 }
 
 @media (max-width: 700px) {
