--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -227,7 +227,7 @@
     }
 }
 
-@media (max-width: 640) {
+@media (max-width: 640px) {
     .work-portfolio-item {
      @include span-columns(9);
     }
