adding media queries for sub pages

--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -230,6 +230,27 @@
 @media (max-width: 640px) {
     .work-portfolio-item {
      @include span-columns(9);
+        
+     .portfolio-overlay {
+         padding-top: 15%;
+     }
+    }
+    
+    .post {
+        padding-left: 1em;
+        
+        .post-content {
+            
+            .work-portfolio-item {
+                .portfolio-overlay {
+                    h3 {
+                        font-size: 1.6em;
+                    }
+                    a.hollow-button {
+                        font-size: .9em;
+                    }
+                }
+            }
     }
 }
 
