adding media queries for sub pages

--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -237,7 +237,7 @@
     }
     
     .post {
-        padding-left: 1em;
+        padding-left: .5em;
         
         .post-content {
             
