--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6601,7 +6601,10 @@ a.github-nav:hover {
     padding-top: 15%; }
 
   .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
-    padding-top: 5%; } }
+    padding-top: 5%; }
+
+  .work-portfolio-item h3 {
+    font-size: 1.65em; } }
 @media (max-width: 363px) {
   .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
     padding-top: 3%; }
