--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -287,6 +287,12 @@
     .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
         padding-top: 5%;
     }
+    
+    .work-portfolio-item {
+        h3 {
+            font-size: 1.65em;
+        }
+    }
 }
 
 @media (max-width: 363px) {
