adding media queries for sub pages

--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -289,8 +289,11 @@
     }
     
     .work-portfolio-item {
+        
+        .portfolio-overlay }
         h3 {
             font-size: 1.65em;
+        }
         }
     }
 }
