adding media queries for sub pages

--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -290,7 +290,7 @@
     
     .work-portfolio-item {
         
-        .portfolio-overlay }
+        .portfolio-overlay {
         h3 {
             font-size: 1.65em;
         }
