--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -298,6 +298,16 @@
     }
 }
 
+@media (max-width: 400px) {
+    .work-portfolio-item {
+        .portfolio-overlay {
+            h3 {
+                font-size: 1.2em;
+            }
+        }
+    }
+}
+
 @media (max-width: 363px) {
     .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
         padding-top: 3%;
