--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -288,25 +288,21 @@
         padding-top: 5%;
     }
     
-    .work-portfolio-item {
+    .post {
         
-        .portfolio-overlay {
-        h3 {
-            font-size: 1.65em;
-        }
-        }
-    }
-}
-
-@media (max-width: 400px) {
-    .work-portfolio-item {
-        .portfolio-overlay {
-            h3 {
-                font-size: 1.2em;
+        .post-content {
+            
+            .work-portfolio-item {
+                .portfolio-overlay {
+                    h3 {
+                        font-size: 1.65em;
+                    }
+                }
             }
         }
     }
 }
+
 
 @media (max-width: 363px) {
     .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
