--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -225,6 +225,12 @@
             font-size: 1.7em;
         }
     }
+    
+    .post {
+        .post-content {
+            padding-left: 1.5em;
+        }
+    }
 }
 
 @media (max-width: 640px) {
