--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -279,6 +279,11 @@
             line-height: 88px;
         }
     }
+    .sub-hero {
+        h1 {
+            font-size: 60px;
+        }
+    }
     
     .featured-post-list > li .portfolio-item .portfolio-overlay a {
         line-height: 2em;
