--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6564,7 +6564,7 @@ a.github-nav:hover {
   .hero h2 {
     font-size: 1.7em; }
 
-  .post .post-content {
+  .post .post-content p {
     padding-left: 1.5em; } }
 @media (max-width: 640px) {
   .work-portfolio-item {
