--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -228,7 +228,10 @@
     
     .post {
         .post-content {
+            
+            p {
             padding-left: 1.5em;
+            }
         }
     }
 }
