--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
             {% for page in sorted_pages %}{% if page.title %}
             <li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
             {% endif %}{% endfor %}
+            <li><a href="http://www.jordanbarhorst.com/assets/resume.pdf">Resume</a></li>
         </ul>
         <ul class="slideout-social">
            <li><a class="fbook-nav" target="_blank" href="http://www.facebook.com/jordanbarhorst">Facebook</a></li>
