--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,15 +44,14 @@
       {{ content }}
     </div>
     {% include footer.html %}
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <!-- <script>
+  <script>
     (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
     function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
     e=o.createElement(i);r=o.getElementsByTagName(i)[0];
     e.src='//www.google-analytics.com/analytics.js';
     r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-XXXXX-X');ga('send','pageview');
-  </script> -->
+    ga('create','UA-40337442-2');ga('send','pageview');
+  </script>
   <script type="text/javascript" src="//code.jquery.com/jquery-2.1.3.min.js"></script>
   <!-- vendorScripts:js -->
   <script src="{{ site.baseurl }}/assets/dist/scripts/vendors-6cead6a5.min.js"></script>
