--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,13 +44,15 @@
     </div>
     {% include footer.html %}
 <script>
-    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-    e.src='//www.google-analytics.com/analytics.js';
-    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-40337442-2');ga('send','pageview');
-  </script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-40337442-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
   <script type="text/javascript" src="//code.jquery.com/jquery-2.1.3.min.js"></script>
   <!-- vendorScripts:js -->
   <script src="{{ site.baseurl }}/assets/dist/scripts/vendors-6cead6a5.min.js"></script>
